finished all controller and yaml
